namespace-kind.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
---
apiVersion: v1
kind: Namespace
metadata:
  name: kn-poc-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: kn-poc-eventing
